@@ -36,20 +36,20 @@
   </div>
 </form>
 
-<?php $form->open(FILENAME_PRODUCT_REVIEWS_WRITE, 'action=process&productId=' . $zm_product->getId(), true, array('id'=>'review')) ?>
+<?php $form->open(FILENAME_PRODUCT_REVIEWS_WRITE, 'action=process&productId=' . $zm_product->getId(), true, array('id'=>'newReview')) ?>
     <fieldset>
         <legend><?php zm_l10n("New Review") ?></legend>
         <p><?php zm_l10n("Choose a ranking for this item. 1 star is the worst and 5 stars is the best.") ?></p>
 
         <div id="stars">
-            <?php for ($ii=1; $ii<6; ++$ii) { $checked = ($review->getRating() == $ii ? ' checked="checked"' : ''); ?>
+            <?php for ($ii=1; $ii<6; ++$ii) { $checked = ($newReview->getRating() == $ii ? ' checked="checked"' : ''); ?>
               <input type="radio" id="rating-<?php echo $ii ?>" name="rating" value="<?php echo $ii ?>"<?php echo $checked ?> />
               <label for="rating-<?php echo $ii ?>"><img src="<?php $zm_theme->themeURL("images/stars_".$ii."_small.gif") ?>" alt="<?php zm_l10n("%s Star", $ii) ?>" title=" <?php zm_l10n("%s Star", $ii) ?> " /></label>
             <?php } ?>
         </div>
 
         <label for="text"><?php zm_l10n("Please tell us what you think and share your opinions with others. Be sure to focus your comments on the product.") ?></label>
-        <textarea id="text" name="text" cols="60" rows="5"><?php $html->encode($review->getText()) ?></textarea>
+        <textarea id="text" name="text" cols="60" rows="5"><?php $html->encode($newReview->getText()) ?></textarea>
         <div class="btn"><input type="submit" class="btn" value="<?php zm_l10n("Send") ?>" /></div>
         <div>
             <strong><?php zm_l10n("NOTE:") ?> </strong><?php zm_l10n("HTML tags are not allowed.") ?><br />
